--- a/assurance.html
+++ b/assurance.html
@@ -30,7 +30,7 @@
 <form class="form-basic" method="POST" action="php/insert_assurance.php">
     <h4 class="text-center">Isikan data sesuai dengan form di bawah ini</h4>
     <div class="form-group">
-        <label for="text-input" class="control-label">Nama Surveyor</label>
+        <label for="text-input" class="control-label">Nama Teknisi</label>
         <select class="form-control" name="Nama_Surveyor" id="Nama_Surveyor" required="">
             <option value="">Nama Surveyor</option>
             <option value="amija1">AMIJA1</option>
