--- a/assurance.html
+++ b/assurance.html
@@ -50,7 +50,7 @@
         <input type="text" name="Port_ODP" class="form-control" id="Port_ODP" placeholder="Masukan port ODP" required="">
     </div>
     <div class="form-group">
-        <label for="text-input" class="control-label">Nomor Telepon Pelanggan</label>
+        <label for="text-input" class="control-label">Nomor Service</label>
         <input type="number" name="No_Telpon_Pelanggan" class="form-control" id="No_Telpon_Pelanggan" placeholder="Masukan nomor telepon pelanggan" required="">
     </div>
     <div class="form-group">
