--- a/deployment.html
+++ b/deployment.html
@@ -30,7 +30,7 @@
 <form class="form-basic" method="POST" action="php/insert_deployment.php">
     <h4 class="text-center">Isikan data sesuai dengan form di bawah ini</h4>
     <div class="form-group">
-        <label for="text-input" class="control-label">Nama Surveyor</label>
+        <label for="text-input" class="control-label">Nama Teknisi</label>
         <select class="form-control" name="Nama_Surveyor" id="Nama_Surveyor" required="">
             <option value="">Nama Surveyor</option>
             <option value="amija1">AMIJA1</option>
@@ -50,7 +50,7 @@
         <input type="text" name="Port_ODP" class="form-control" id="Port_ODP" placeholder="Masukan port ODP" required="">
     </div>
     <div class="form-group">
-        <label for="text-input" class="control-label">Nomor Telepon Pelanggan</label>
+        <label for="text-input" class="control-label">Nomor Service</label>
         <input type="number" name="No_Telpon_Pelanggan" class="form-control" id="No_Telpon_Pelanggan" placeholder="Masukan nomor telepon pelanggan" required="">
     </div>
     <div class="form-group">
