--- a/assurance.html
+++ b/assurance.html
@@ -32,10 +32,14 @@
     <div class="form-group">
         <label for="text-input" class="control-label">Nama Teknisi</label>
         <select class="form-control" name="Nama_Surveyor" id="Nama_Surveyor" required="">
-            <option value="">Nama Surveyor</option>
+            <option value="">Nama Teknisi</option>
             <option value="amija1">AMIJA1</option>
             <option value="amija2">AMIJA2</option>
         </select>
+    </div>
+    <div class="form-group">
+       <label for="text-input" class="control-label">Nama Teknisi</label>
+        <input type="text" name="Nama_Teknisi" class="form-control" id="Nama_Teknisi" placeholder="Masukan nama teknisi" required="">
     </div>
     <div class="form-group">
         <label for="text-input" class="control-label">Kode Angka QR</label>
