--- a/migration.html
+++ b/migration.html
@@ -29,13 +29,9 @@
 
 <form class="form-basic" method="POST" action="php/insert_migration.php">
     <h4 class="text-center">Isikan data sesuai dengan form di bawah ini</h4>
-    <div class="form-group">
-        <label for="text-input" class="control-label">Nama Surveyor</label>
-        <select class="form-control" name="Nama_Surveyor" id="Nama_Surveyor" required="">
-            <option value="">Nama Surveyor</option>
-            <option value="amija1">AMIJA1</option>
-            <option value="amija2">AMIJA2</option>
-        </select>
+   <div class="form-group">
+       <label for="text-input" class="control-label">Nama Teknisi</label>
+        <input type="text" name="Nama_Teknisi" class="form-control" id="Nama_Teknisi" placeholder="Masukan nama teknisi" required="">
     </div>
     <div class="form-group">
         <label for="text-input" class="control-label">Kode Angka QR</label>
@@ -50,7 +46,7 @@
         <input type="text" name="Port_ODP" class="form-control" id="Port_ODP" placeholder="Masukan port ODP" required="">
     </div>
     <div class="form-group">
-        <label for="text-input" class="control-label">Nomor Telepon Pelanggan</label>
+        <label for="text-input" class="control-label">Nomor Service</label>
         <input type="number" name="No_Telpon_Pelanggan" class="form-control" id="No_Telpon_Pelanggan" placeholder="Masukan nomor telepon pelanggan" required="">
     </div>
     <div class="form-group">
