--- a/deployment.html
+++ b/deployment.html
@@ -27,11 +27,15 @@
           <h2> Layanan Pengisian Deployment </h2>
       </div></section>
 
-<form class="form-basic" method="POST" action="php/insert_deployment.php">
+<form class="form-basic" method="POST" action="insert_deployment.php">
     <h4 class="text-center">Isikan data sesuai dengan form di bawah ini</h4>
-   <div class="form-group">
-       <label for="text-input" class="control-label">Nama Teknisi</label>
-        <input type="text" name="Nama_Teknisi" class="form-control" id="Nama_Teknisi" placeholder="Masukan nama teknisi" required="">
+    <div class="form-group">
+        <label for="text-input" class="control-label">Nama Teknisi</label>
+        <select class="form-control" name="Nama_Teknisi" id="Nama_Teknisi" required="">
+            <option value="">Nama Teknisi</option>
+            <option value="amija1">AMIJA1</option>
+            <option value="amija2">AMIJA2</option>
+        </select>
     </div>
     <div class="form-group">
         <label for="text-input" class="control-label">Kode Angka QR</label>
@@ -42,16 +46,24 @@
         <input type="text" name="Nama_ODP" class="form-control" id="Nama_ODP" placeholder="Masukan nama ODP" required="">
     </div>
     <div class="form-group">
-        <label for="text-input" class="control-label">Port ODP</label>
-        <input type="text" name="Port_ODP" class="form-control" id="Port_ODP" placeholder="Masukan port ODP" required="">
+        <label for="text-input" class="control-label">Kapasitas ODP</label>
+        <input type="number" name="Kapasitas_ODP" class="form-control" id="Kapasitas_ODP" placeholder="Masukan kapasitas ODP" required="">
     </div>
     <div class="form-group">
-        <label for="text-input" class="control-label">Nomor Service</label>
-        <input type="number" name="No_Telpon_Pelanggan" class="form-control" id="No_Telpon_Pelanggan" placeholder="Masukan nomor telepon pelanggan" required="">
+        <label for="text-input" class="control-label">Status Port</label>
+        <select class="form-control" name="Status_Port" id="Status_Port" required="">
+            <option value="">Status Port</option>
+            <option value="amija1">Kosong</option>
+            <option value="amija2">Isi</option>
+        </select>
     </div>
     <div class="form-group">
-        <label for="text-input" class="control-label">SN ONT</label>
-        <input type="text" name="SN_ONT" class="form-control" id="SN_ONT" placeholder="Masukan SN ONT" required="">
+        <label for="text-input" class="control-label">Port ODP Input</label>
+        <input type="text" name="Port_ODP_Input" class="form-control" id="Port_ODP_Input" placeholder="Masukan port ODP" required="">
+    </div>
+    <div class="form-group">
+        <label for="text-input" class="control-label">Koordinat ODP</label>
+        <input type="text" name="Koordinat_ODP" class="form-control" id="Koordinat_ODP" placeholder="Masukan koordinat ODP" required="">
     </div>
     <div class="form-group">
         <label class="control-label">Catatan:</label>
