--- a/maintenance.html
+++ b/maintenance.html
@@ -27,15 +27,19 @@
           <h2> Layanan Pengisian Maintenance </h2>
       </div></section>
 
-<form class="form-basic" method="POST" action="php/insert_maintenance.php">
+<form class="form-basic" method="POST" action="insert_maintenance.php">
     <h4 class="text-center">Isikan data sesuai dengan form di bawah ini</h4>
-    <div class="form-group">
-       <label for="text-input" class="control-label">Nama Teknisi</label>
-        <input type="text" name="Nama_Teknisi" class="form-control" id="Nama_Teknisi" placeholder="Masukan nama teknisi" required="">
+<div class="form-group">
+        <label for="text-input" class="control-label">Nama Teknisi</label>
+        <select class="form-control" name="Nama_Teknisi" id="Nama_Teknisi" required="">
+            <option value="">Nama Teknisi</option>
+            <option value="amija1">AMIJA1</option>
+            <option value="amija2">AMIJA2</option>
+        </select>
     </div>
     <div class="form-group">
         <label for="text-input" class="control-label">Kode Angka QR</label>
-        <input type="text" name="Kode_Angka_QR" class="form-control" id="Kode_Angka_QR" placeholder="Masukan kode angka QR" required="">
+        <input type="text" name="Kode_Angka_QR" class="form-control" id="Kode_Angka_QR" placeholder="Masukan kode angka QR">
     </div>
     <div class="form-group">
         <label for="text-input" class="control-label">Nama ODP</label>
@@ -47,7 +51,7 @@
     </div>
     <div class="form-group">
         <label for="text-input" class="control-label">Nomor Service</label>
-        <input type="number" name="No_Telpon_Pelanggan" class="form-control" id="No_Telpon_Pelanggan" placeholder="Masukan nomor telepon pelanggan" required="">
+        <input type="number" name="No_Service" class="form-control" id="No_Service" placeholder="Masukan nomor service" required="">
     </div>
     <div class="form-group">
         <label for="text-input" class="control-label">SN ONT</label>
